<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#010507"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:background="#000000"
        app:cardBackgroundColor="#00FFFFFF">

        <LinearLayout
            android:id="@+id/movie_scenes_layout"
            android:layout_width="match_parent"
            android:layout_height="277dp"
            android:background="#FFFFFF"
            android:hapticFeedbackEnabled="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/movie_image"
                android:layout_width="match_parent"
                android:layout_height="195dp"
                android:scaleType="fitXY"
                android:src="@drawable/the_wolf_of_wall_street_cover" />

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="386dp"
                android:layout_height="wrap_content"
                android:text="@string/movie_title"
                android:textColor="#1A1A1A"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/movie_category"
                android:layout_width="382dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/movie_category" />

            <Switch
                android:id="@+id/favourite_switch"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:text="@string/movie_switch_text"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>