<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/movie_scenes_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        tools:context=".screens.list.ListFragment">

        <Spinner
            android:id="@+id/movie_category_spinner"
            android:layout_width="159dp"
            android:layout_height="29dp"
            android:layout_marginTop="4dp"
            android:background="#880303"
            android:entries="@array/movie_category_array"
            android:prompt="@string/spinner_prompt"
            android:text="@string/system_spinner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.936"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/movie_list_recycle_view"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_category_spinner"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/movie_category_text"
            android:layout_width="166dp"
            android:layout_height="26dp"
            android:text="@string/category_selector_text"
            android:textAlignment="textEnd"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/movie_list_recycle_view"
            app:layout_constraintEnd_toStartOf="@+id/movie_category_spinner"
            app:layout_constraintHorizontal_bias="0.563"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.466" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
