<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/selected_movie_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="#000000"
            tools:context=".screens.movie.MovieFragment">

            <Button
                android:id="@+id/selected_movie_return_button"
                android:layout_width="391dp"
                android:layout_height="31dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="#880101"
                android:text="@string/return_from_selected_movie_text"
                android:textColor="#000000"
                app:layout_constraintBottom_toTopOf="@+id/movie_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.45"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/movie_image"
                android:layout_width="match_parent"
                android:layout_height="195dp"
                android:layout_marginTop="48dp"
                android:scaleType="fitXY"
                android:src="@drawable/the_wolf_of_wall_street_cover"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="393dp"
                android:layout_height="35dp"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif"
                android:textColor="@color/white_text_color"
                android:textSize="24sp"
                android:textStyle="normal|bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_image" />

            <TextView
                android:id="@+id/movie_description"
                android:layout_width="393dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_category" />

            <TextView
                android:id="@+id/movie_category"
                android:layout_width="393dp"
                android:layout_height="28dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:text="TextView"
                android:textAlignment="viewStart"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toTopOf="@+id/movie_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.523"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_title"
                app:layout_constraintVertical_bias="0.571" />

            <TextView
                android:id="@+id/move_scenes_text"
                android:layout_width="393dp"
                android:layout_height="25dp"
                android:layout_marginTop="4dp"
                android:text="@string/movie_scenes_text"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_description" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/movie_scenes_recycle_view"
                android:layout_width="0dp"
                android:layout_height="195dp"
                android:layout_marginTop="4dp"
                android:background="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/move_scenes_text" />

            <TextView
                android:id="@+id/movie_actors_text"
                android:layout_width="393dp"
                android:layout_height="27dp"
                android:layout_marginTop="4dp"
                android:text="@string/movie_actors_text"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_scenes_recycle_view" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/movie_actors_recycle_view"
                android:layout_width="0dp"
                android:layout_height="235dp"
                android:layout_marginTop="4dp"
                android:background="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.36"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_actors_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>